--- a/HTML/starbucks_responsive/css/main2.css
+++ b/HTML/starbucks_responsive/css/main2.css
@@ -17,7 +17,7 @@ a {
 }
 
 .inner {
-  width: 1100px;
+  width: 80%;
   margin: 0 auto;
   position: relative;
 }
@@ -139,43 +139,61 @@ header {
 
 header > .inner {
   height: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header .logo {
   height: 75px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  /* display: none; */
+  margin: 20px;
 }
 
-header .sub-menu {
-  position: absolute;
-  top: 10px;
-  right: 0;
+header .pc-menu {
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-top: 20px;
+  margin-right: 20px;
 }
 
-header .sub-menu ul.menu {
+header .pc-menu .sub-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+header .pc-menu .sub-menu ul.menu {
   font-family: Arial, sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-header .sub-menu ul.menu li {
+header .pc-menu .sub-menu ul.menu li {
   position: relative;
 }
 
-header .sub-menu ul.menu li:first-child::before {
+header .pc-menu .sub-menu ul.menu li:first-child::before {
   display: none;
 }
 
-header .sub-menu ul.menu li::before {
+header .pc-menu .sub-menu ul.menu li::before {
   content: "";
   display: block;
   width: 1px;
@@ -187,23 +205,23 @@ header .sub-menu ul.menu li::before {
   margin: auto 0;
 }
 
-header .sub-menu ul.menu li a {
+header .pc-menu .sub-menu ul.menu li a {
   font-size: 12px;
   padding: 11px 16px;
   display: block;
   color: #656565;
 }
 
-header .sub-menu ul.menu li a:hover {
+header .pc-menu .sub-menu ul.menu li a:hover {
   color: #000;
 }
 
-header .sub-menu .search {
+header .pc-menu .sub-menu .search {
   height: 34px;
   position: relative;
 }
 
-header .sub-menu .search input {
+header .pc-menu .sub-menu .search input {
   width: 36px;
   height: 34px;
   padding: 4px 10px;
@@ -219,12 +237,12 @@ header .sub-menu .search input {
   transition: width .4s;
 }
 
-header .sub-menu .search input:focus {
+header .pc-menu .sub-menu .search input:focus {
   width: 190px;
   border-color: #669900;
 }
 
-header .sub-menu .search .material-icons {
+header .pc-menu .sub-menu .search .material-icons {
   height: 24px;
   position: absolute;
   top: 0;
@@ -236,92 +254,128 @@ header .sub-menu .search .material-icons {
   cursor: pointer;
 }
 
-header .sub-menu .search.focused .material-icons {
+header .pc-menu .sub-menu .search.focused .material-icons {
   opacity: 0;
   cursor: default;
 }
 
-header .main-menu {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: 1;
+header .pc-menu .main-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-header .main-menu .item .item__name {
+header .pc-menu .main-menu .item .item__name {
   padding: 10px 20px 34px 20px;
   font-family: Arial, sans-serif;
   font-size: 13px;
 }
 
-header .main-menu .item:hover .item__name {
+header .pc-menu .main-menu .item:hover .item__name {
   background-color: #2c2a29;
   color: #669900;
   border-radius: 6px 6px 0 0;
 }
 
-header .main-menu .item .item__contents {
+header .pc-menu .main-menu .item .item__contents {
   width: 100%;
   position: fixed;
   left: 0;
   display: none;
 }
 
-header .main-menu .item .item__contents .contents__menu {
+header .pc-menu .main-menu .item .item__contents .contents__menu {
   background-color: #2c2a29;
   height: auto;
 }
 
-header .main-menu .item .item__contents .contents__menu > ul {
+header .pc-menu .main-menu .item .item__contents .contents__menu > ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 20px 0;
 }
 
-header .main-menu .item .item__contents .contents__menu > ul > li {
+header .pc-menu .main-menu .item .item__contents .contents__menu > ul > li {
   width: 220px;
 }
 
-header .main-menu .item .item__contents .contents__menu > ul > li h4 {
+header .pc-menu .main-menu .item .item__contents .contents__menu > ul > li h4 {
   padding: 3px 0 12px 0;
   font-size: 14px;
   color: #fff;
 }
 
-header .main-menu .item .item__contents .contents__menu > ul > li ul li {
+header .pc-menu .main-menu .item .item__contents .contents__menu > ul > li ul li {
   padding: 5px 0;
   font-size: 12px;
   color: #999;
   cursor: pointer;
 }
 
-header .main-menu .item .item__contents .contents__menu > ul > li ul li:hover {
+header .pc-menu .main-menu .item .item__contents .contents__menu > ul > li ul li:hover {
   color: #669900;
 }
 
-header .main-menu .item .item__contents .contents__texture {
+header .pc-menu .main-menu .item .item__contents .contents__texture {
   padding: 26px 0;
   font-size: 12px;
   background-image: url("../images/main_menu_pattern.jpg");
 }
 
-header .main-menu .item .item__contents .contents__texture h4 {
+header .pc-menu .main-menu .item .item__contents .contents__texture h4 {
   color: #999;
   font-weight: 700;
 }
 
-header .main-menu .item .item__contents .contents__texture p {
+header .pc-menu .main-menu .item .item__contents .contents__texture p {
   color: #669900;
   margin: 4px 0 14px;
   font-size: 12px;
 }
 
-header .main-menu .item:hover .item__contents {
+header .pc-menu .main-menu .item:hover .item__contents {
   display: block;
+}
+
+@media screen and (max-width: 1200px) {
+  header .pc-menu {
+    display: none;
+  }
+  header .mobile-menu {
+    width: 150px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  header .mobile-menu .mobile-icon1 {
+    background-image: url("https://www.starbucks.co.kr/common/img/common/icon_user_m.png");
+    background-size: cover;
+    background-position: top left;
+    height: 30px;
+    width: 25px;
+    cursor: pointer;
+  }
+  header .mobile-menu .mobile-icon2 {
+    background-image: url("https://www.starbucks.co.kr/common/img/common/icon_spot_m.png");
+    background-size: cover;
+    background-position: top;
+    height: 32px;
+    width: 25px;
+    cursor: pointer;
+  }
+  header .mobile-menu .mobile-icon3 {
+    background-image: url("https://www.starbucks.co.kr/common/img/common/btn_berger_m.png");
+    background-size: cover;
+    background-position: top right;
+    background-repeat: no-repeat;
+    height: 30px;
+    width: 25px;
+    cursor: pointer;
+  }
 }
 
 header .badges {
