--- a/CSS/css_study/main1.css
+++ b/CSS/css_study/main1.css
@@ -71,3 +71,146 @@
 .item {
   border: 2px dashed red;
 }
+.grid-container2 {
+  margin-top: 10px;
+  display: grid;
+  grid-template-rows: repeat(4, 100px);
+  grid-template-columns: repeat(3, 1fr);
+  border: 4px solid lightgray;
+}
+.grid-container2 .item {
+  border: 10px solid red;
+  font-size: 30px;
+}
+.grid-container2 .item:nth-child(1) {
+  grid-row: 1/3;
+  grid-column: 1/3;
+}
+.grid-container2 .item:nth-child(2) {
+  grid-row: 1/3;
+}
+.grid-container2 .item:nth-child(4) {
+  grid-row: 4/5;
+  grid-column: -3/-1;
+}
+.grid-container3 {
+  width: 600px;
+  display: grid;
+  grid-template-rows: repeat(3, 100px);
+  grid-template-areas:
+    "header header header"
+    "main main aside"
+    ". footer footer";
+  row-gap: 30px;
+  column-gap: 15px;
+  gap: 30px 15px;
+}
+.grid-container3 .item {
+  border: 10px solid red;
+}
+.grid-container3 .item:nth-child(1) {
+  grid-area: header;
+}
+.grid-container3 .item:nth-child(2) {
+  grid-area: main;
+}
+.grid-container3 .item:nth-child(3) {
+  grid-area: aside;
+}
+.grid-container3 .item:nth-child(4) {
+  grid-area: footer;
+}
+.grid-container4 {
+  width: 600px;
+  display: grid;
+  grid-template-rows: repeat(2,100px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 100px;
+  grid-auto-columns: 1fr;
+}
+.grid-container4 .item {
+  border: 10px solid blue;
+}
+.grid-container4 .item:nth-child(1) {
+  grid-column: 1/3;
+}
+.grid-container4 .item:nth-child(2) {
+  grid-column: 3/5;
+}
+.grid-container4 .item:nth-child(3) {
+  grid-column: span 2;
+}
+.grid-container4 .item:nth-child(4) {
+  grid-row: 5/7;
+  grid-column: 6/7;
+}
+.grid-auto {
+  width: 600px;
+  display: grid;
+  grid-template-rows: repeat(3, 100px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column dense;
+}
+.grid-auto .item {
+  border: 10px solid black;
+}
+.grid-auto .item:nth-child(1) {
+  grid-column: span 2;
+}
+.grid-auto .item:nth-child(2) {
+  grid-column: -1/-3;
+}
+.grid-line {
+  width: 600px;
+  display: grid;
+  grid-template-rows: 100px 100px;
+  grid-template-columns: 1fr [center-start] 1fr [center-end] 1fr;
+  grid-auto-flow: dense;
+}
+.grid-line .item {
+  border: 10px solid green;
+}
+.grid-line .item:nth-child(1) {
+  grid-column: center-start / center-end;
+}
+.grid-repeat {
+  width: 600px;
+  display: grid;
+  grid-template-columns: repeat(2, 100px 200px)
+}
+.item {
+  border: 10px solid brown;
+}
+.grid-area {
+  width: 600px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+}
+.grid-area .item {
+}
+.grid-area .item:nth-child(1) {
+  border: 10px solid royalblue;
+  grid-area: 2 / span 2 / span 1 / 4;
+}
+.grid-template {
+  display: grid;
+  /* grid-template-rows: 80px 350px 130px;
+  grid-template-columns: 2fr 100px 1fr;
+  grid-template-areas:
+    "header header header"
+    "main . aside"
+    "footer footer footer"; */
+  grid-template:
+    "header header header" 80px
+    "main . aside" 350px
+    "footer footer footer" 130px
+    / 2fr 100px 1fr;
+}
+.grid-template > * {
+  border: 10px solid yellowgreen;
+}
+.grid-template header { grid-area: header; }
+.grid-template main { grid-area: main; }
+.grid-template aside { grid-area: aside; }
+.grid-template footer { grid-area: footer; }
