--- a/CSS/css_layout/challenge/1day/style.css
+++ b/CSS/css_layout/challenge/1day/style.css
@@ -2,14 +2,13 @@
 
 body {
   background-color:#F6F6F6;
-  padding:50px 25px;
+  padding:50px 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   max-width: 770px;
   width: 100%;
   margin:0 auto;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 .poster {
   width: 480px;
@@ -45,7 +44,7 @@ body {
 .title .sub-title p {
   display: flex;
   justify-content: flex-end;
-  width: 65%;
+  width: 50%;
 }
 .main {
   margin: 30px;
