--- a/CSS/css_layout/challenge/day7/style.css
+++ b/CSS/css_layout/challenge/day7/style.css
@@ -1,5 +1,4 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   width: 100%;
@@ -7,110 +6,151 @@ body {
   padding-top: 30px;
   background: black;
 }
+
 #content {
-  width: 600px;
+  width: 560px;
   height: 420px;
   margin: 0 auto;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 15px repeat(3, 1fr);
-  
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: 15px (1fr)[3];
+      grid-template-rows: 15px repeat(3, 1fr);
 }
-header {
+
+#content header {
   background: #BDBEC0;
   grid-column: 1 / -1;
   border-top-left-radius: 2px;
   border-top-right-radius: 2px;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-  
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
-header .short {
+
+#content header .short {
   width: 45px;
   height: 10px;
   margin-left: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  
 }
-.short li {
+
+#content header .short li {
   width: 6px;
   margin: 2px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   display: block;
   border: 1px solid #757579;
   border-radius: 50%;
 }
-header .item {
+
+#content header .item {
   width: 100%;
   height: 8px;
   border: 1px solid #757579;
   border-radius: 2px;
 }
-.title {
+
+#content .text {
+  font-size: 12px;
+}
+
+#content .title {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-area: 2 / 1 / 3/ 2;
   padding: 7px 5px;
   background: black;
   color: white;
-  
 }
-.title p:nth-child(1) {
-  transform: scaleY(-1);
+
+#content .title p:nth-child(1) {
+  -webkit-transform: scaleY(-1);
+          transform: scaleY(-1);
 }
-.title p:nth-child(3) {
-  transform: scaleY(-1);
+
+#content .title p:nth-child(3) {
+  -webkit-transform: scaleY(-1);
+          transform: scaleY(-1);
 }
-.title p:last-child {
+
+#content .title p:last-child {
   word-spacing: 7px;
 }
-.purple {
+
+#content .purple {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
   grid-area: 2 / 2 / 3 / 3;
   background: #6C01FF;
 }
-.menu {
+
+#content .menu {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
   grid-row: 3/ span 2;
   background: #FF1706;
   padding: 7px 5px;
-  line-height: 120%;
 }
-.white {
+
+#content .white {
   background: white;
 }
-.tickets {
-  grid-row-start: -2;
+
+#content .tickets {
+  -ms-grid-row: -2;
+      grid-row-start: -2;
   background: #FFC806;
   padding: 7px 5px;
 }
-.speakers {
+
+#content .speakers {
   grid-column: -3/ -2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
   grid-row: 2/ span 3;
   background: white;
   padding: 5px 5px;
   line-height: 120%;
-  font-size:  12px;
 }
-.speakers p {
+
+#content .speakers p {
   font-size: 1px;
   margin-bottom: 5px;
 }
-.speakers ul li:nth-child(6) {
+
+#content .speakers ul li:nth-child(6) {
   display: inline;
   background: #6C01FF;
 }
-.artists {
+
+#content .artists {
   grid-column: -2/-1;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
   grid-row: 2 / span 3;
   background: white;
   padding: 7px 5px;
   line-height: 120%;
-  font-size:  12px;
-  
 }
-.artists p {
+
+#content .artists p {
   font-size: 1px;
   margin-bottom: 5px;
 }
-.artists ul li:first-child>span {
-  transform: scaleY(-1);
-}
+/*# sourceMappingURL=style.css.map */
