--- a/CSS/css_layout/challenge/day9/style.css
+++ b/CSS/css_layout/challenge/day9/style.css
@@ -344,12 +344,12 @@ main {
   gap: 5px;
   -ms-grid-columns: (minmax(500px, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  grid-auto-rows: 450px;
+  grid-auto-rows: minmax(450px, 1fr);
 }
 
 main .item {
   background-color: white;
-  font-size: 2rem;
+  font-size: 1.5rem;
   padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -385,12 +385,25 @@ main .item .viewimage {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100%;
+  height: 80%;
 }
 
 main .item .viewimage .frame {
   width: 80%;
   height: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .item .viewimage .frame img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 main .item .more {
