--- a/CSS/css_layout/challenge/day9/style.scss
+++ b/CSS/css_layout/challenge/day9/style.scss
@@ -179,10 +179,10 @@ main {
   background-color: black;
   gap: 5px;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  grid-auto-rows: 450px;
+  grid-auto-rows: minmax(450px, 1fr);
   .item {
     background-color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -196,10 +196,17 @@ main {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      height: 80%;
       .frame {
         width: 80%;
         height: 80%;
+        display: flex;
+        align-items: center;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
       }
     }
     .more {
