--- a/CSS/css_layout/challenge/day10/style.css
+++ b/CSS/css_layout/challenge/day10/style.css
@@ -3,6 +3,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   width: 100%;
   height: 100vh;
+  background-color: #FF7400;
 }
 
 main {
@@ -13,19 +14,18 @@ main {
 
 #left {
   width: 60%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  margin: 10px;
+  font-size: 20px;
+  color: #FF0400;
+  background-color: #FF0400;
+  border: 2px solid #FF0400;
+  display: -ms-grid;
+  display: grid;
+  gap: 2px;
+  grid-auto-rows: 170px;
 }
 
 #left .item {
-  color: #FF0400;
-  background-color: #FF0400;
   display: -ms-grid;
   display: grid;
   gap: 2px;
@@ -38,6 +38,7 @@ main {
 }
 
 #left .item > div {
+  background-color: #FF7400;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,14 +53,15 @@ main {
 
 #left .item .short {
   grid-row: 1 / -1;
-  font-size: 1.25em;
   font-weight: 500;
+}
+
+#left .item .short span {
   -webkit-writing-mode: vertical-rl;
       -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
-  background-color: #FF7400;
 }
 
 #left .item .title {
@@ -68,24 +70,111 @@ main {
   font-weight: 500;
   padding-left: 15px;
   letter-spacing: 1%;
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: start;
-  background-color: #FF7400;
 }
 
 #left .item .madeby {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/ 2;
-  background-color: #FF7400;
 }
 
 #left .item .time {
   grid-row: 2/-1;
-  background-color: #FF7400;
 }
 
 #left .item:nth-child(2) {
   color: white;
+}
+
+#right {
+  width: 40%;
+  font-size: 30px;
+  font-weight: 500;
+  background-color: #FF0400;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto (1fr)[2];
+      grid-template-columns: auto repeat(2, 1fr);
+  -ms-grid-rows: 60px (1fr)[6];
+      grid-template-rows: 60px repeat(6, 1fr);
+}
+
+#right .side {
+  grid-row: 1/ -1;
+  display: -ms-grid;
+  display: grid;
+  grid-row: repeat(2, 1fr);
+  position: relative;
+}
+
+#right .side .madeby {
+  padding: 10px;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  background-color: #FF00FF;
+}
+
+#right .side .icon {
+  place-self: center center;
+  position: absolute;
+}
+
+#right .side .time {
+  padding: 10px;
+  color: white;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  background-color: #1900FF;
+}
+
+#right .select {
+  grid-column: 2/ -1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#right .select > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#right .select .circle {
+  width: 15px;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 15px;
+}
+
+#right .select div:nth-child(3) .circle {
+  background-color: black;
+}
+
+#right .item p {
+  font-size: 20px;
 }
 /*# sourceMappingURL=style.css.map */
