--- a/CSS/css_layout/challenge/day10/style.scss
+++ b/CSS/css_layout/challenge/day10/style.scss
@@ -4,24 +4,29 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   width: 100%;
   height: 100vh;
+  background-color: #FF7400;
 }
 main {
   display: flex;
 }
 #left {
   width: 60%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  margin: 10px;
+  font-size: 20px;
+  color: #FF0400;
+  background-color: #FF0400;
+  border: 2px solid #FF0400;
+  display: grid;
+  gap: 2px;
+  grid-auto-rows: 170px;
   .item {
-    color: #FF0400;
-    background-color: #FF0400;
     display: grid;
     gap: 2px;
     box-sizing: border-box;
     grid-template-columns: .6fr 7fr 2.4fr;
     grid-template-rows: 1fr 1fr;
     & > div {
+      background-color: #FF7400;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -29,11 +34,11 @@ main {
     }
     .short {
       grid-row: 1 / -1;
-      font-size: 1.25em;
       font-weight: 500;
-      writing-mode: vertical-rl;
-      transform: rotate(180deg);
-      background-color: #FF7400;
+      span {
+        writing-mode: vertical-rl;
+        transform: rotate(180deg);
+      }
     }
     .title {
       grid-row: 1/ -1;
@@ -41,22 +46,74 @@ main {
       font-weight: 500;
       padding-left: 15px;
       letter-spacing: 1%;
-      display: block;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
       text-align: start;
-      background-color: #FF7400;
     }
     .madeby {
       grid-row: 1/ 2;
-      background-color: #FF7400;
     }
     .time {
       grid-row: 2/-1;
-      background-color: #FF7400;
     }
   }
   .item:nth-child(2) {
     color: white;
-    .title {
+  }
+}
+#right {
+  width: 40%;
+  font-size: 30px;
+  font-weight: 500;
+  background-color: #FF0400;
+  display: grid;
+  grid-template-columns: auto repeat(2, 1fr);
+  grid-template-rows: 60px repeat(6, 1fr);
+  .side {
+    grid-row: 1/ -1;
+    display: grid;
+    grid-row: repeat(2,1fr);
+    position: relative;
+    .madeby {
+      padding: 10px;
+      writing-mode: vertical-rl;
+      background-color: #FF00FF;
+    }
+    .icon {
+      place-self: center center;
+      position: absolute;
+    }
+    .time {
+      padding: 10px;
+      color: white;
+      writing-mode: vertical-rl;
+      transform: rotate(180deg);
+      background-color: #1900FF;
+    }
+  }
+  .select {
+    grid-column: 2/ -1;
+    display: flex;
+    justify-content: space-between;
+    & > div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .circle {
+      width: 15px;
+      height: 15px;
+      border: 2px solid black;
+      border-radius: 15px;
+    }
+    div:nth-child(3) .circle {
+      background-color: black;
+    }
+  }
+  .item {
+    p {
+      font-size: 20px;
     }
   }
 }
