--- a/CSS/css_layout/challenge/day11/style.css
+++ b/CSS/css_layout/challenge/day11/style.css
@@ -123,6 +123,69 @@ main > div {
 .contents1 {
   grid-column: 3/-1;
   grid-row: 1/-2;
+  background: black;
+  display: -ms-grid;
+  display: grid;
+  gap: 3px;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+}
+
+.contents1 div {
+  background-size: cover;
+  background-position: center center;
+}
+
+.contents1 .left {
+  grid-row: 1/-1;
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-069.jpg");
+  background-position: 20% center;
+}
+
+.contents1 .upright {
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-080.jpg");
+}
+
+.contents1 .downright {
+  background: black;
+  display: -ms-grid;
+  display: grid;
+  gap: 3px;
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.contents1 .downright .item:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 1/1/3/3;
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-106.jpg");
+}
+
+.contents1 .downright .item:nth-child(2) {
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-072.jpg");
+}
+
+.contents1 .downright .item:nth-child(3) {
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+}
+
+.contents1 .downright .item:nth-child(4) {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: span 2/1/-1/2;
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+}
+
+.contents1 .downright .item:nth-child(5) {
+  grid-area: span 2/ 2/-1/-1;
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
 }
 
 .services {
@@ -148,5 +211,42 @@ main > div {
 
 .contents2 {
   grid-column: 3/-1;
+  background-color: black;
+  display: -ms-grid;
+  display: grid;
+  gap: 3px;
+  -ms-grid-columns: (1fr)[2] 3.5fr;
+      grid-template-columns: repeat(2, 1fr) 3.5fr;
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+}
+
+.contents2 div {
+  background-size: cover;
+  background-position: center center;
+}
+
+.contents2 .item:nth-child(1) {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-area: 1/1/-1/2;
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-106.jpg");
+}
+
+.contents2 .item:nth-child(2) {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-072.jpg");
+}
+
+.contents2 .item:nth-child(3) {
+  grid-area: 1/-2/-1/-1;
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+  background-position: center 20%;
+}
+
+.contents2 .item:nth-child(4) {
+  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
 }
 /*# sourceMappingURL=style.css.map */
