--- a/CSS/css_layout/challenge/day11/style.scss
+++ b/CSS/css_layout/challenge/day11/style.scss
@@ -83,7 +83,49 @@ main {
 }
 .contents1 {
   grid-column: 3/-1;
-  grid-row: 1/-2
+  grid-row: 1/-2;
+  background: black;
+  display: grid;
+  gap: 3px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  div {
+    background-size: cover;
+    background-position: center center;
+  }
+  .left {
+    grid-row: 1/-1;
+    background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-069.jpg");
+    background-position: 20% center;
+  }
+  .upright {
+    background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-080.jpg");
+  }
+  .downright {
+    background: black;
+    display: grid;
+    gap: 3px;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    .item:nth-child(1) {
+      grid-area: 1/1/3/3;
+      background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-106.jpg");
+    }
+    .item:nth-child(2) {
+      background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-072.jpg");
+    }
+    .item:nth-child(3) {
+      background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+    }
+    .item:nth-child(4) {
+      grid-area: span 2/1/-1/2;
+      background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+    }
+    .item:nth-child(5) {
+      grid-area: span 2/ 2/-1/-1;
+      background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+    }
+  }
 }
 .services {
   grid-column: 2/3;
@@ -99,5 +141,29 @@ main {
 }
 .contents2 {
   grid-column: 3/-1;
-
+  background-color: black;
+  display: grid;
+  gap: 3px;
+  grid-template-columns: repeat(2, 1fr) 3.5fr;
+  grid-template-rows: repeat(2, 1fr);
+  div {
+    background-size: cover;
+    background-position: center center;
+  }
+  .item:nth-child(1) {
+    grid-area: 1/1/-1/2;
+    background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-106.jpg");
+  }
+  .item:nth-child(2) {
+    grid-column: 2/3;
+    background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-072.jpg");
+  }
+  .item:nth-child(3) {
+    grid-area: 1/-2/-1/-1;
+    background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+    background-position: center 20%;
+  }
+  .item:nth-child(4) {
+    background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+  }
 }
