UPdate css_layout: challenge 1

--- a/CSS/css_layout/challenge/day10/style.css
+++ b/CSS/css_layout/challenge/day10/style.css
@@ -66,6 +66,7 @@ main {
 
 #left .item .title {
   grid-row: 1/ -1;
+  white-space: nowrap;
   font-size: 80px;
   font-weight: 500;
   padding-left: 15px;
