--- a/CSS/css_layout/challenge/day10/style.scss
+++ b/CSS/css_layout/challenge/day10/style.scss
@@ -42,6 +42,7 @@ main {
     }
     .title {
       grid-row: 1/ -1;
+      white-space: nowrap;
       font-size: 80px;
       font-weight: 500;
       padding-left: 15px;
