--- a/CSS/css_layout/challenge/day11/style.css
+++ b/CSS/css_layout/challenge/day11/style.css
@@ -230,14 +230,16 @@ main > div {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-area: 1/1/-1/2;
-  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-106.jpg");
+  background-image: url("https://images.unsplash.com/photo-1514228742587-6b1558fcca3d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80");
+  background-position: 20% center;
 }
 
 .contents2 .item:nth-child(2) {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2/3;
-  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-072.jpg");
+  background-image: url("https://images.unsplash.com/photo-1449247709967-d4461a6a6103?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80");
+  background-position: center 60%;
 }
 
 .contents2 .item:nth-child(3) {
@@ -247,6 +249,7 @@ main > div {
 }
 
 .contents2 .item:nth-child(4) {
-  background-image: url("https://a1office.com.au/wp-content/uploads/2019/05/A1-Visy-Ess-Fields-017.jpg");
+  background-image: url("https://images.unsplash.com/photo-1516962215378-7fa2e137ae93?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=668&q=80");
+  background-position: center 70%;
 }
 /*# sourceMappingURL=style.css.map */
